# bzip2rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yaml  versionup.yaml
src/: bzip2.rs  cli.rs  main.rs
testdata/: alice-in-wonderland.txt  alice_in_wonderland.txt.bz2
